# kite-ai-bot

./: .env.example  .gitignore  Cargo.toml  Readme.md  accounts_tmp.json  proxy_list_tmp.json
src/: lib.rs  main.rs
src/model/: api_response.rs  mod.rs  spinner_data.rs  user_balance.rs
src/model/exception/: api_error.rs  mod.rs  operation_error.rs  setup_error.rs
src/repository/: api_repository.rs  mod.rs
src/service/: mod.rs
src/service/api/: api_service.rs
src/service/db/: mod.rs  rustqlite.rs
src/service/evm_service/: evm_service.rs
src/utils/: configuration.rs  constants.rs  exception_handler.rs  helper.rs  logger.rs  mod.rs  network.rs  spinner.rs
