[package]
name = "kite-ai-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
bip39 = "2.1.0"
chrono = "0.4.39"
dashmap = "6.1.0"
rusqlite = { version = "0.33.0", features = ["bundled"] }
dotenvy = "0.15.7"
ethers = "2.0.14"
indicatif = "0.17.11"
log = "0.4.25"
rand = "0.9.0"
reqwest = { version = "0.12.12", features = ["json"] }
rust_decimal = "1.36.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
simple_logger = "5.0.0"
tokio = { version = "1.43.0", features = ["full"] }
